# streamlit_chatbot

./: .env.template  Dockerfile  README.md  app.py  chat_details.json  pyproject.toml
.streamlit/: config.toml
ai/: chat.py
chains/: chains.py
conversation/: Assistance_in_car_selection.json
prompts/: chain_router.py  financial_questions.py  generic_questions.py
