[tool.poetry]
name = "streamlit-chatbot"
version = "0.1.0"
description = "This is a chatbot application with streamlit GUI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
pydotenv = "^0.0.7"
openai = "^1.58.1"
langchain = "^0.3.13"
jupyter = "^1.1.1"
langchain-openai = "^0.2.14"
langchain-community = "^0.3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
